[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvascular"
description = 'Computational model of the vascular system.'
readme = "README.md"
requires-python = ">=3.7"
license = "BSL-1.0"
keywords = []
authors = [
  { name = "R. Tohid", email = "tohid.rod@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython"
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/rtohid/pyvascular#readme"
Issues = "https://github.com/rtohid/pyvascular/issues"
Source = "https://github.com/rtohid/pyvascular"

[tool.hatch.version]
path = "pyvascular/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "numpy",
  "matplotlib"
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=pyvascular --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "pyvascular/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
